@@ -26,6 +26,10 @@ HOW TO UPDATE?
  VERSION 0.6.122
 ------------------------------------------------------------------------
 
+Updates:
+- callback_data: callback_data can now be a callable that will automatically
+                 run and replace the data argument for the callback
+
 Fixes:
 - add_text_point: fixed issue where the y value was incorrect #450
 - constants:      added missing docking mvGuiCol_* constants
